Update WetKit Ember.

--- a/css/style.css
+++ b/css/style.css
@@ -1149,7 +1149,7 @@ button[class*="action-item-large"],
 }
 
 body {
-  background: white url('../images/spark_bg_tile.png?1378579607');
+  background: white url('../images/spark_bg_tile.png?1378732653');
 }
 
 img {
@@ -1282,6 +1282,10 @@ table tr.error {
 }
 
 /* FORM ELEMENTS */
+.form-item {
+  margin-right: .25em;
+}
+
 #diff-inline-form select,
 div.filter-options select {
   padding: 0;
@@ -1295,10 +1299,13 @@ div.filter-options select {
   padding-right: 45px;
 }
 
-.form-item.form-type-select.form-item-operation {
+input[type="text"] {
   max-width: 300px;
 }
 
+/*.form-item.form-type-select.form-item-operation {
+ max-width: 300px;
+}*/
 .machine-name-label {
   margin-left: 10px;
 }
@@ -1336,7 +1343,7 @@ ul.admin-list {
 }
 
 ul.admin-list li {
-  background: url('../images/list-item.png?1378579607') no-repeat scroll 0 0 transparent;
+  background: url('../images/list-item.png?1378732653') no-repeat scroll 0 0 transparent;
   list-style-image: none;
   list-style-type: none;
   margin: 0 0 1em;
@@ -1622,7 +1629,7 @@ details > .details-wrapper,
   float: left;
   /* LTR */
   line-height: 3.2em;
-  margin: 0 0 .5em 0;
+  margin-bottom: .5em;
 }
 
 .exposed-filters .form-item label {
@@ -1631,7 +1638,7 @@ details > .details-wrapper,
   font-weight: normal;
   margin-right: 0.25em;
   width: inherit;
-  padding: 0 5px 0 0;
+  padding-right: 5px;
 }
 
 .exposed-filters .filters {
@@ -1662,14 +1669,9 @@ ul.current-filters li {
   display: inline;
 }
 
-.exposed-filters .form-select {
-  margin: 0;
-}
-
 .exposed-filters .form-item label {
-  padding: 0;
+  padding: .8em 0;
   line-height: normal;
-  padding-top: .7em;
 }
 
 div.exposed-filters div#edit-actions {
@@ -1683,10 +1685,6 @@ div.exposed-filters div#edit-actions .form-select {
 
 .container-inline {
   border: none;
-}
-
-.container-inline div, .container-inline label {
-  margin: 0;
 }
 
 /* TIPS */
@@ -2060,7 +2058,7 @@ ol.task-list li {
 }
 
 ol.task-list li.active {
-  background: transparent url('../images/task-item.png?1378579607') no-repeat 3px 50%;
+  background: transparent url('../images/task-item.png?1378732653') no-repeat 3px 50%;
   /* LTR */
   color: #000;
   padding: 0.5em 1em 0.5em 20px;
@@ -2068,7 +2066,7 @@ ol.task-list li.active {
 }
 
 ol.task-list li.done {
-  background: transparent url('../images/task-check.png?1378579607') no-repeat 0 50%;
+  background: transparent url('../images/task-check.png?1378732653') no-repeat 0 50%;
   color: green;
 }
 
@@ -2253,10 +2251,6 @@ img.screenshot {
    ============================================================================= */
 /* Navbar (coming soon) */
 /* Ctools */
-#ctools-export-ui-list-form .form-submit {
-  margin-top: 2em !important;
-}
-
 .ctools-button-processed {
   background-color: white;
   border: 1px solid #ddd;
@@ -3069,6 +3063,32 @@ dl.page-manager-wizards dd {
   border: 0px solid transparent;
 }
 
+#page-manager-list-pages-form .form-select,
+#page-manager-list-pages-form input,
+#ctools-export-ui-list-form .form-select,
+#ctools-export-ui-list-form input {
+  display: inline-block;
+}
+
+#page-manager-list-pages-form .form-item,
+#ctools-export-ui-list-form .form-item {
+  padding-right: .25em;
+  float: none;
+  display: inline-block;
+}
+
+#edit-pages-apply,
+#edit-pages-reset,
+#ctools-export-ui-list-form .form-submit {
+  margin-top: 0;
+  float: none;
+}
+
+body form#page-manager-list-pages-form,
+body form#ctools-export-ui-list-form {
+  margin: 1em 0;
+}
+
 /* MEDIA */
 /* Media - Field widget */
 .media-widget {
@@ -3274,7 +3294,7 @@ div.admin.my-workbench .right {
 
   /* vertical tabs */
   div.vertical-tabs {
-    background: url('../images/fc.png?1378579607') repeat-y scroll -97px 0 white;
+    background: url('../images/fc.png?1378732653') repeat-y scroll -97px 0 white;
     border: 1px solid #ddd;
   }
 
