--- a/sass/wetkit_ember.hacks.scss
+++ b/sass/wetkit_ember.hacks.scss
@@ -69,6 +69,10 @@ div.vertical-tabs .vertical-tabs-panes .vertical-tabs-pane fieldset {
   padding-bottom: 0.5em;
 }
 
+#media-browser-tabset #branding h1 {
+  height: auto;
+}
+
 .form-managed-file .form-file {
   margin-bottom: 1em;
 }
