--- a/css/ie/ie7.css
+++ b/css/ie/ie7.css
@@ -1,3 +1,11 @@
+/*
+   Optimal text line length for legibility is 65-75 characters.
+   I add an extra 10 to compensate for the fact that ex
+   (the height of the lower case "x", usually equal to it's width
+   and therefor an average character) is narrower than the width of
+   an uppercase letter and any given line will contain a few of them.
+   Apply in the style.scss file using "max-width"
+*/
 ul.tabs.primary {
   padding: 0;
 }
