--- a/css/normalize.css
+++ b/css/normalize.css
@@ -1,4 +1,12 @@
 /*! normalize.css 2012-07-07T09:50 UTC - http://github.com/necolas/normalize.css */
+/*
+   Optimal text line length for legibility is 65-75 characters.
+   I add an extra 10 to compensate for the fact that ex
+   (the height of the lower case "x", usually equal to it's width
+   and therefor an average character) is narrower than the width of
+   an uppercase letter and any given line will contain a few of them.
+   Apply in the style.scss file using "max-width"
+*/
 /* ==========================================================================
    HTML5 display definitions
    ========================================================================== */
