--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,11 @@
+/*
+   Optimal text line length for legibility is 65-75 characters.
+   I add an extra 10 to compensate for the fact that ex
+   (the height of the lower case "x", usually equal to it's width
+   and therefor an average character) is narrower than the width of
+   an uppercase letter and any given line will contain a few of them.
+   Apply in the style.scss file using "max-width"
+*/
 h3, h4, th, legend, h1, h2, h5, h6, dt, label, button,
 [type="reset"],
 [type="submit"],
@@ -1149,7 +1157,30 @@ button[class*="action-item-large"],
 }
 
 body {
-  background: white url('../images/spark_bg_tile.png?1378732653');
+  background: white url('../images/spark_bg_tile.png?1378754287');
+}
+
+p,
+blockquote,
+pre,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+nav,
+section,
+summary {
+  max-width: 85ex;
 }
 
 img {
@@ -1160,7 +1191,8 @@ legend {
   padding: 0;
 }
 
-h2, h3 {
+h2,
+h3 {
   color: #555;
 }
 
@@ -1303,11 +1335,28 @@ input[type="text"] {
   max-width: 300px;
 }
 
-/*.form-item.form-type-select.form-item-operation {
- max-width: 300px;
-}*/
 .machine-name-label {
   margin-left: 10px;
+}
+
+.form-managed-file .form-file, .form-managed-file .form-submit {
+  margin: 0;
+  display: inline-block;
+  margin-right: .5em;
+  line-height: 1em;
+  /* corrects vertical alignment of default filename text */
+}
+
+ul.tips, div.description, .form-item div.description {
+  font-size: 0.9em;
+  line-height: 1.231em;
+  margin: 5px 0;
+  color: #aaa;
+}
+
+ul.tips:hover, div.description:hover, .form-item div.description:hover {
+  color: inherit;
+  transition: all 1s;
 }
 
 /* ADMIN LISTS */
@@ -1343,7 +1392,7 @@ ul.admin-list {
 }
 
 ul.admin-list li {
-  background: url('../images/list-item.png?1378732653') no-repeat scroll 0 0 transparent;
+  background: url('../images/list-item.png?1378754287') no-repeat scroll 0 0 transparent;
   list-style-image: none;
   list-style-type: none;
   margin: 0 0 1em;
@@ -1608,9 +1657,8 @@ details > .details-wrapper,
 .filter-wrapper .form-item,
 .filter-wrapper .filter-guidelines,
 .filter-wrapper .filter-help {
-  font-size: 0.923em;
-  padding: 2px 10px 0;
-  /* LTR */
+  font-size: 0.9em;
+  padding: 0;
 }
 
 #edit-filters {
@@ -1697,8 +1745,8 @@ div.description,
 }
 
 ul.tips li {
-  margin: 0.25em 0 0.25em 1.5em;
-  /* LTR */
+  margin: 0.25em 0;
+  list-style: none;
 }
 
 body div.form-type-radio div.description,
@@ -1839,6 +1887,10 @@ div.vertical-tabs ul li.vertical-tab-button a:hover,
 div.vertical-tabs ul li.vertical-tab-button a:focus {
   background: #e9e9e9;
   outline: 0px solid transparent;
+}
+
+.vertical-tabs-list li a:first-child {
+  height: 40px;
 }
 
 /* DROPBUTTON */
@@ -2058,7 +2110,7 @@ ol.task-list li {
 }
 
 ol.task-list li.active {
-  background: transparent url('../images/task-item.png?1378732653') no-repeat 3px 50%;
+  background: transparent url('../images/task-item.png?1378754287') no-repeat 3px 50%;
   /* LTR */
   color: #000;
   padding: 0.5em 1em 0.5em 20px;
@@ -2066,7 +2118,7 @@ ol.task-list li.active {
 }
 
 ol.task-list li.done {
-  background: transparent url('../images/task-check.png?1378732653') no-repeat 0 50%;
+  background: transparent url('../images/task-check.png?1378754287') no-repeat 0 50%;
   color: green;
 }
 
@@ -3204,6 +3256,10 @@ div.admin.my-workbench .right {
   }
 }
 @media (max-width: 480px) {
+  #page {
+    margin: 2em 1.25em 1.25em;
+  }
+
   body.admin-expanded {
     margin-left: 0;
   }
@@ -3225,13 +3281,24 @@ div.admin.my-workbench .right {
   }
 
   /* form elements */
+  label {
+    margin: .25em 0;
+  }
+
+  .form-item {
+    display: block;
+    width: 100%;
+  }
+
   input.form-button-disabled,
   input.form-button-disabled:active {
     float: none;
     width: 100%;
-    margin-right: 10px;
+    margin: 1em 0;
   }
 
+  #edit-submit,
+  .form-submit,
   input.form-autocomplete,
   input.form-text,
   input.form-file,
@@ -3241,7 +3308,7 @@ div.admin.my-workbench .right {
     max-width: 100% !important;
     /* form-text overflows the page in chrome. should be fixed in core */
     float: none;
-    margin-right: 10px;
+    margin: 1em 0;
   }
 
   input.form-text:focus,
@@ -3250,7 +3317,7 @@ div.admin.my-workbench .right {
   select.form-select:focus {
     width: 100%;
     float: none;
-    margin-right: 10px;
+    margin: 1em 0;
   }
 
   /* dashboard */
@@ -3294,7 +3361,7 @@ div.admin.my-workbench .right {
 
   /* vertical tabs */
   div.vertical-tabs {
-    background: url('../images/fc.png?1378732653') repeat-y scroll -97px 0 white;
+    background: url('../images/fc.png?1378754287') repeat-y scroll -97px 0 white;
     border: 1px solid #ddd;
   }
 
