--- a/lib/ux_styleguide/core/libraries/_dimensions.scss
+++ b/lib/ux_styleguide/core/libraries/_dimensions.scss
@@ -16,3 +16,12 @@ $rhythm-space: ms(-1) !default;
 $rhythm-space-short: ms(-5) !default;
 $inset-space: ms(4) !default;
 $inset-space-short: ms(2) !default;
+$line-length-normal: 85ex;
+/*
+   Optimal text line length for legibility is 65-75 characters.
+   I add an extra 10 to compensate for the fact that ex
+   (the height of the lower case "x", usually equal to it's width
+   and therefor an average character) is narrower than the width of
+   an uppercase letter and any given line will contain a few of them.
+   Apply in the style.scss file using "max-width"
+*/
