--- a/sass/style.scss
+++ b/sass/style.scss
@@ -12,13 +12,36 @@
 body {
   background: $color-background image-url("spark_bg_tile.png");
 }
+p,
+blockquote,
+pre,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+nav,
+section,
+summary {
+max-width: $line-length-normal;
+}
 img {
   margin: $rhythm-space 0;
 }
 legend  {
   padding: 0;
 }
-h2,h3 {
+h2,
+h3 {
   color: #555;
 }
 textarea {
@@ -142,11 +165,24 @@ div.filter-options select {
 input[type="text"] {
   max-width: 300px;
 }
-/*.form-item.form-type-select.form-item-operation {
- max-width: 300px;
-}*/
 .machine-name-label {
   margin-left:10px;
+}
+.form-managed-file .form-file, .form-managed-file .form-submit {
+  margin: 0;
+  display: inline-block;
+  margin-right: .5em;
+  line-height: 1em; /* corrects vertical alignment of default filename text */
+}
+ul.tips, div.description, .form-item div.description {
+  font-size: 0.9em;
+  line-height: 1.231em;
+  margin: 5px 0;
+  color: #aaa;
+}
+ul.tips:hover, div.description:hover, .form-item div.description:hover {
+  color: inherit;
+  transition: all 1s;
 }
 
 /* ADMIN LISTS */
@@ -415,8 +451,8 @@ details > .details-wrapper,
 .filter-wrapper .form-item,
 .filter-wrapper .filter-guidelines,
 .filter-wrapper .filter-help {
-  font-size: 0.923em;
-  padding: 2px 10px 0; /* LTR */
+  font-size: 0.9em;
+  padding: 0;
 }
 #edit-filters  {
   float: left;
@@ -487,7 +523,8 @@ div.description,
   margin:5px 0;
 }
 ul.tips li {
-  margin:0.25em 0 0.25em 1.5em; /* LTR */
+  margin:0.25em 0;
+  list-style: none;
 }
 body div.form-type-radio div.description,
 body div.form-type-checkbox div.description {
@@ -602,6 +639,9 @@ div.vertical-tabs ul li.vertical-tab-button a:hover,
 div.vertical-tabs ul li.vertical-tab-button a:focus {
   background: #e9e9e9;
   outline:0px solid transparent;
+}
+.vertical-tabs-list li a:first-child {
+height: 40px;
 }
 
 /* DROPBUTTON */
@@ -1755,6 +1795,9 @@ div.admin.my-workbench .right {
 
 @media (max-width: 480px) {
 
+  #page {
+    margin: 2em 1.25em 1.25em;
+  }
   body.admin-expanded {
     margin-left: 0;
   }
@@ -1771,12 +1814,21 @@ div.admin.my-workbench .right {
     display: none;
   }
   /* form elements */
+  label {
+    margin: .25em 0;
+  }
+  .form-item {
+    display: block;
+    width: 100%;
+  }
   input.form-button-disabled,
   input.form-button-disabled:active {
   float: none;
   width: 100%;
-  margin-right: 10px;
+  margin: 1em 0;
   }
+  #edit-submit,
+  .form-submit,
   input.form-autocomplete,
   input.form-text,
   input.form-file,
@@ -1785,7 +1837,7 @@ div.admin.my-workbench .right {
   min-width:100% !important;
   max-width:100% !important; /* form-text overflows the page in chrome. should be fixed in core */
   float: none;
-  margin-right: 10px;
+  margin: 1em 0;
   }
   input.form-text:focus,
   input.form-file:focus,
@@ -1793,7 +1845,7 @@ div.admin.my-workbench .right {
   select.form-select:focus {
   width: 100%;
   float: none;
-  margin-right: 10px;
+  margin: 1em 0;
   }
   /* dashboard */
   #dashboard div#dashboard_main {
