--- a/sass/wetkit_ember.hacks.scss
+++ b/sass/wetkit_ember.hacks.scss
@@ -80,3 +80,9 @@ div.vertical-tabs .vertical-tabs-panes .vertical-tabs-pane fieldset {
 .views-displays .secondary .active a, .views-displays .secondary .active a:hover {
   border-color: #008fdc;
 }
+
+.views-ui-display-tab-actions .ctools-button-processed input {
+  color: #008fdc;
+  text-shadow: none;
+  font-weight: normal;
+}
