--- a/css/style.css
+++ b/css/style.css
@@ -1157,7 +1157,7 @@ button[class*="action-item-large"],
 }
 
 body {
-  background: white url('../images/spark_bg_tile.png?1378754287');
+  background: white url('../images/spark_bg_tile.png?1379100431');
 }
 
 p,
@@ -1202,7 +1202,7 @@ textarea {
 
 fieldset {
   border: 0px solid transparent;
-  margin: 0em;
+  margin: 1em 0;
   padding: 0em;
 }
 
@@ -1392,7 +1392,7 @@ ul.admin-list {
 }
 
 ul.admin-list li {
-  background: url('../images/list-item.png?1378754287') no-repeat scroll 0 0 transparent;
+  background: url('../images/list-item.png?1379100431') no-repeat scroll 0 0 transparent;
   list-style-image: none;
   list-style-type: none;
   margin: 0 0 1em;
@@ -2110,7 +2110,7 @@ ol.task-list li {
 }
 
 ol.task-list li.active {
-  background: transparent url('../images/task-item.png?1378754287') no-repeat 3px 50%;
+  background: transparent url('../images/task-item.png?1379100431') no-repeat 3px 50%;
   /* LTR */
   color: #000;
   padding: 0.5em 1em 0.5em 20px;
@@ -2118,7 +2118,7 @@ ol.task-list li.active {
 }
 
 ol.task-list li.done {
-  background: transparent url('../images/task-check.png?1378754287') no-repeat 0 50%;
+  background: transparent url('../images/task-check.png?1379100431') no-repeat 0 50%;
   color: green;
 }
 
@@ -2297,6 +2297,21 @@ img.screenshot {
 
 /* =============================================================================
 
+   STYLING SPECIFIC TO OVERLAY
+
+   ========================================================================== */
+div#overlay {
+  min-width: 320px;
+  max-width: 960px;
+}
+
+#overlay #page {
+  padding: 2em;
+}
+
+/* =============================================================================
+
+
    STYLES SPECIFIC TO CONTRIBUTED MODULES
    navbar, ctools, media, views, views UI, panels, panelizer, workbench
 
@@ -2435,11 +2450,6 @@ img.screenshot {
 
 .form-type-checkbox {
   margin-top: 0;
-}
-
-.form-submit:not(.js-hide) + .form-submit,
-.views-admin a.button:not(.js-hide) + a.button {
-  margin-left: 0;
 }
 
 .container-inline {
@@ -2802,6 +2812,7 @@ ul#views-display-menu-tabs li {
 
 .views-ui-dialog .views-override {
   padding: 0 2em 1em;
+  border-bottom: 1px solid #ccc;
 }
 
 .views-ui-dialog .views-override > * {
@@ -2815,6 +2826,10 @@ ul#views-display-menu-tabs li {
   margin: 0;
   background: #555555;
   color: white;
+}
+
+.views-ui-dialog fieldset .form-item {
+  margin: .5em 1em;
 }
 
 .views-ui-dialog #views-progress-indicator {
@@ -2834,21 +2849,25 @@ ul#views-display-menu-tabs li {
 .views-ui-dialog .scroll {
   border: 1px solid #CCC;
   border-width: 0;
-  padding: 1em 2em;
+  padding: 1em 2em 3em;
 }
 
 .views-ui-dialog fieldset .item-list {
   padding-left: 2em;
 }
 
-.views-ui-dialog .form-buttons {
-  background-color: #F3F4EE;
-  padding: 1em 2em;
+.views-ui-dialog #edit-options {
+  float: none;
+  display: block;
+  width: auto;
 }
 
-.views-ui-dialog .form-buttons input {
-  margin-bottom: 0;
-  margin-right: 0;
+.views-ui-dialog .form-buttons {
+  background-color: #F3F4EE;
+  padding: 1.5em 2em;
+  position: relative;
+  bottom: 1.5em;
+  width: 100%;
 }
 
 .form-type-checkboxes #edit-options-value,
@@ -2946,11 +2965,6 @@ ul#views-display-menu-tabs li {
 
 #edit-options-exception.collapsible {
   margin-top: 0;
-}
-
-/* Show the drupal system throbber image */
-.ajax-progress .throbber {
-  display: block;
 }
 
 #views-ajax-body form {
@@ -3256,8 +3270,17 @@ div.admin.my-workbench .right {
   }
 }
 @media (max-width: 480px) {
-  #page {
-    margin: 2em 1.25em 1.25em;
+  #overlay #page {
+    margin: 0;
+    padding: 1em;
+  }
+
+  #overlay {
+    padding: 1em;
+  }
+
+  div#overlay {
+    width: 100%;
   }
 
   body.admin-expanded {
@@ -3361,7 +3384,7 @@ div.admin.my-workbench .right {
 
   /* vertical tabs */
   div.vertical-tabs {
-    background: url('../images/fc.png?1378754287') repeat-y scroll -97px 0 white;
+    background: url('../images/fc.png?1379100431') repeat-y scroll -97px 0 white;
     border: 1px solid #ddd;
   }
 
