--- a/sass/wetkit_ember.hacks.scss
+++ b/sass/wetkit_ember.hacks.scss
@@ -31,9 +31,14 @@ ul.secondary {
   padding: .5em 3.5em;
   background-color: #3b3b3b;
   box-shadow: none;
-  height: 20.9px;
-  .language-toggle {
-    float: right;
+}
+
+#tab-bar {
+  ul.secondary{
+    height: 20.9px;
+    .language-toggle {
+      float: right;
+    }
   }
 }
 
