Sync back up with Ember project.

--- a/css/style.css
+++ b/css/style.css
@@ -1157,7 +1157,7 @@ button[class*="action-item-large"],
 }
 
 body {
-  background: white url('../images/spark_bg_tile.png?1379100431');
+  background: white url('../images/spark_bg_tile.png?1379429957');
 }
 
 p,
@@ -1314,6 +1314,10 @@ table tr.error {
 }
 
 /* FORM ELEMENTS */
+#edit-cancel {
+  background-color: #555;
+}
+
 .form-item {
   margin-right: .25em;
 }
@@ -1337,6 +1341,20 @@ input[type="text"] {
 
 .machine-name-label {
   margin-left: 10px;
+}
+
+/* Animated throbber */
+html.js input.form-autocomplete {
+  background-position: 97% 10px;
+  /* LTR */
+  background-size: 22px;
+  -webkit-transition: none;
+}
+
+html.js input.throbbing {
+  background-position: 97% -19px;
+  /* LTR */
+  background-size: 22px;
 }
 
 .form-managed-file .form-file, .form-managed-file .form-submit {
@@ -1392,7 +1410,7 @@ ul.admin-list {
 }
 
 ul.admin-list li {
-  background: url('../images/list-item.png?1379100431') no-repeat scroll 0 0 transparent;
+  background: url('../images/list-item.png?1379429957') no-repeat scroll 0 0 transparent;
   list-style-image: none;
   list-style-type: none;
   margin: 0 0 1em;
@@ -1443,6 +1461,7 @@ div.add-or-remove-shortcuts a span.icon {
 div.add-shortcut a:focus span.icon,
 div.add-shortcut a:hover span.icon {
   background: transparent url("../images/shortcut.svg") no-repeat scroll 0 0;
+  -webkit-trnsition: all 1s;
 }
 
 div.remove-shortcut a span.icon {
@@ -1452,6 +1471,7 @@ div.remove-shortcut a span.icon {
 div.remove-shortcut a:focus span.icon,
 div.remove-shortcut a:hover span.icon {
   background: transparent url("../images/no_shortcut.svg") no-repeat scroll 0 0;
+  -webkit-trnsition: all 1s;
 }
 
 div.add-or-remove-shortcuts a span.text {
@@ -1460,9 +1480,10 @@ div.add-or-remove-shortcuts a span.text {
 
 div.add-or-remove-shortcuts a:focus span.text,
 div.add-or-remove-shortcuts a:hover span.text {
-  background-color: transparent;
+  background-color: inherit;
   font-size: .9em;
   color: white;
+  -webkit-trnsition: all 1s;
 }
 
 /* TABS */
@@ -2110,7 +2131,7 @@ ol.task-list li {
 }
 
 ol.task-list li.active {
-  background: transparent url('../images/task-item.png?1379100431') no-repeat 3px 50%;
+  background: transparent url('../images/task-item.png?1379429957') no-repeat 3px 50%;
   /* LTR */
   color: #000;
   padding: 0.5em 1em 0.5em 20px;
@@ -2118,7 +2139,7 @@ ol.task-list li.active {
 }
 
 ol.task-list li.done {
-  background: transparent url('../images/task-check.png?1379100431') no-repeat 0 50%;
+  background: transparent url('../images/task-check.png?1379429957') no-repeat 0 50%;
   color: green;
 }
 
@@ -2225,6 +2246,10 @@ ol.task-list li.done {
   padding: 0px;
 }
 
+.theme-selector .no-screenshot {
+  background: #ddd;
+}
+
 img.screenshot {
   margin: 0;
 }
@@ -2311,7 +2336,6 @@ div#overlay {
 
 /* =============================================================================
 
-
    STYLES SPECIFIC TO CONTRIBUTED MODULES
    navbar, ctools, media, views, views UI, panels, panelizer, workbench
 
@@ -2324,6 +2348,16 @@ div#overlay {
   font-size: inherit;
   padding-bottom: 0;
   padding-top: 0;
+}
+
+.ctools-button-processed input {
+  color: #2fa6e5;
+  text-shadow: none;
+}
+
+.ctools-button-processed input:hover {
+  color: #2fa6e5;
+  text-shadow: none;
 }
 
 .ctools-button-processed li {
@@ -2436,6 +2470,10 @@ div#overlay {
   background-position: center -115px, left top;
 }
 
+.views-admin span.icon {
+  float: none;
+}
+
 .views-displays .secondary a:hover > .icon.add {
   background-position: center 7px;
 }
@@ -2444,18 +2482,15 @@ div#overlay {
   background-position: center 7px;
 }
 
-.form-item {
+/*.form-item {
   margin-top: 0;
 }
-
 .form-type-checkbox {
   margin-top: 0;
 }
-
 .container-inline {
   padding-top: 0;
-}
-
+}*/
 .views-admin fieldset fieldset.container-inline {
   margin-bottom: 0;
   margin-top: 0;
@@ -2668,6 +2703,11 @@ ul#views-display-menu-tabs li {
   margin-right: 0;
 }
 
+#views-ui-preview-form .form-type-textfield .description {
+  white-space: normal;
+  max-width: 300px;
+}
+
 .views-ui-display-tab-bucket {
   border: 0px solid transparent;
   line-height: inherit;
@@ -2864,8 +2904,9 @@ ul#views-display-menu-tabs li {
 
 .views-ui-dialog .form-buttons {
   background-color: #F3F4EE;
-  position: relative;
-  bottom: 1.5em;
+  padding: 1.5em 2em;
+  position: absolute;
+  bottom: 0;
   width: 100%;
 }
 
@@ -2966,6 +3007,11 @@ ul#views-display-menu-tabs li {
   margin-top: 0;
 }
 
+/* Hide the drupal system throbber image */
+.ajax-progress .throbber {
+  display: none;
+}
+
 #views-ajax-body form {
   margin: 1em 0;
 }
@@ -2999,10 +3045,17 @@ ul#views-display-menu-tabs li {
 .views-displays .secondary .action-list {
   background: #fff;
   border: 1px solid #ddd;
+  padding: .5em;
+}
+
+.action-list input.form-submit {
+  color: #2fa6e5;
+  padding: 0;
+  margin: 0;
 }
 
 .views-displays .secondary .action-list input.form-submit {
-  color: #333;
+  color: #333333;
   text-shadow: none;
   font-weight: normal;
 }
@@ -3025,7 +3078,7 @@ ul#views-display-menu-tabs li {
 
 .ctools-button-processed {
   border: 0;
-  background: transparent;
+  background: white;
 }
 
 .ctools-button-processed li {
@@ -3037,6 +3090,7 @@ ul#views-display-menu-tabs li {
  */
 .ctools-twisty {
   border-width: 6px 6px 0;
+  right: 4px;
 }
 
 .ctools-dropbutton-processed.open .ctools-twisty {
@@ -3192,6 +3246,42 @@ body form#ctools-export-ui-list-form {
   display: block;
 }
 
+.media-thumbnails-select {
+  float: left;
+  margin: 1em 0;
+  clear: both;
+}
+
+#media-browser-library-list {
+  clear: both;
+  float: left;
+}
+
+.media-list-thumbnails .form-type-checkbox {
+  bottom: 138px;
+  left: 2px;
+}
+
+.media-list-thumbnails img,
+.media-list-thumbnails label {
+  margin: 0;
+}
+
+.media-item .label-wrapper {
+  text-align: left;
+  bottom: 0;
+  left: 5px;
+  margin: 0;
+  width: 90%;
+  overflow: hidden;
+}
+
+.media-item {
+  background: #eee;
+  border: 1px solid #CCCCCC;
+  padding: 18px;
+}
+
 /* Media - Media browser */
 #media-browser-tabset #branding {
   padding: 10px 0 0 10px;
@@ -3241,6 +3331,11 @@ body form#ctools-export-ui-list-form {
 div.admin.my-workbench .left,
 div.admin.my-workbench .right {
   margin: 0;
+}
+
+/* FEATURES */
+form div.buttons {
+  text-align: left;
 }
 
 /* =============================================================================
@@ -3383,7 +3478,7 @@ div.admin.my-workbench .right {
 
   /* vertical tabs */
   div.vertical-tabs {
-    background: url('../images/fc.png?1379100431') repeat-y scroll -97px 0 white;
+    background: url('../images/fc.png?1379429957') repeat-y scroll -97px 0 white;
     border: 1px solid #ddd;
   }
 
