--- a/sass/vertical-tabs.scss
+++ b/sass/vertical-tabs.scss
@@ -71,6 +71,12 @@ div.vertical-tabs .vertical-tabs-panes {
   margin: 0 0 0 265px; /* LTR */
   padding: 10px 15px 10px 0; /* LTR */
 }
+div.vertical-tabs .vertical-tabs-panes legend {
+  display: none;
+}
+div.vertical-tabs .vertical-tabs-pane fieldset legend {
+  display: block;
+}
 .vertical-tabs-pane .fieldset-wrapper > div:first-child {
   padding-top: 5px;
 }
