--- a/css/wetkit_ember.hacks.css
+++ b/css/wetkit_ember.hacks.css
@@ -32,6 +32,10 @@ ul.secondary {
 }
 #tab-bar ul.secondary .language-toggle {
   float: right;
+  margin: 0px;
+}
+#tab-bar ul.secondary .language-toggle a {
+  color: #FFF;
 }
 
 .form-wrapper,
@@ -48,7 +52,12 @@ div.vertical-tabs .vertical-tabs-panes .vertical-tabs-pane fieldset {
   padding: 2.5em 1.5em;
 }
 
+div.vertical-tabs .vertical-tabs-pane fieldset legend {
+  display: block;
+}
+
 #branding {
+  color: #FFF;
   background-color: #555555;
 }
 
