Updates to WetKit Theme.

--- a/sass/wetkit_ember.hacks.scss
+++ b/sass/wetkit_ember.hacks.scss
@@ -108,3 +108,7 @@ div.vertical-tabs .vertical-tabs-pane fieldset legend {
   text-shadow: none;
   font-weight: normal;
 }
+
+.theme-default h3 {
+  color: #008fdc;
+}
