--- a/css/wetkit_ember.styles.css
+++ b/css/wetkit_ember.styles.css
@@ -1,3 +1,34 @@
+/* =============================================================================
+   Media
+   ========================================================================== */
+.media-browser-tab {
+  padding: 1.5em;
+}
+
+#media-browser-tabset ul.tabs.primary li a:link {
+  color: #FFF;
+}
+
+#media-browser-tabset #media-tabs-wrapper ul.tabs.primary li a {
+  background-color: #008fdc;
+}
+
+#media-browser-tabset #media-tabs-wrapper ul.tabs.primary li a:hover {
+  background-color: #FFF;
+  color: #000;
+}
+
+#media-browser-tabset #branding {
+  background-color: #000;
+  padding-bottom: 0.5em;
+}
+#media-browser-tabset #branding h1 {
+  height: auto;
+}
+
+/* =============================================================================
+   System
+   ========================================================================== */
 .breadcrumb {
   margin-bottom: 1em;
 }
@@ -21,7 +52,7 @@ ul.primary li.active a:hover {
 }
 
 ul.secondary {
-  margin: 0 -3.1em;
+  margin: 0 -3.1em 0 -3.5em;
   padding: .5em 3.5em;
   background-color: #3b3b3b;
   box-shadow: none;
@@ -38,16 +69,6 @@ ul.secondary {
   color: #FFF;
 }
 
-.form-wrapper,
-.container-inline {
-  margin-bottom: 2em;
-}
-
-.form-wrapper .fieldset-wrapper
-.container-inline .fieldset-wrapper {
-  padding: 2em 2em 0em 2em;
-}
-
 div.vertical-tabs .vertical-tabs-panes .vertical-tabs-pane fieldset {
   padding: 2.5em 1.5em;
 }
@@ -61,36 +82,17 @@ div.vertical-tabs .vertical-tabs-pane fieldset legend {
   background-color: #555555;
 }
 
-.media-browser-tab {
-  padding: 1.5em;
-}
-
-#media-browser-tabset ul.tabs.primary li a:link {
-  color: #FFF;
-}
-
-#media-browser-tabset #media-tabs-wrapper ul.tabs.primary li a {
-  background-color: #008fdc;
-}
-
-#media-browser-tabset #media-tabs-wrapper ul.tabs.primary li a:hover {
-  background-color: #FFF;
-  color: #000;
-}
-
-#media-browser-tabset #branding {
-  background-color: #000;
-  padding-bottom: 0.5em;
-}
-
-#media-browser-tabset #branding h1 {
-  height: auto;
-}
-
 .form-managed-file .form-file {
   margin-bottom: 1em;
 }
 
+.theme-default h3 {
+  color: #008fdc;
+}
+
+/* =============================================================================
+   Views
+   ========================================================================== */
 .views-displays .secondary .active a, .views-displays .secondary .active a:hover {
   border-color: #008fdc;
 }
@@ -99,8 +101,4 @@ div.vertical-tabs .vertical-tabs-pane fieldset legend {
   color: #008fdc;
   text-shadow: none;
   font-weight: normal;
-}
-
-.theme-default h3 {
-  color: #008fdc;
 }
