--- a/css/wetkit_ember.styles.css
+++ b/css/wetkit_ember.styles.css
@@ -1,29 +1,32 @@
 /* =============================================================================
    Media
    ========================================================================== */
-.media-browser-tab {
-  padding: 1.5em;
+#media-browser-tabset .media-browser-tab {
+  padding: 1.25em;
 }
-
-#media-browser-tabset ul.tabs.primary li a:link {
-  color: #FFF;
-}
-
-#media-browser-tabset #media-tabs-wrapper ul.tabs.primary li a {
-  background-color: #008fdc;
-}
-
-#media-browser-tabset #media-tabs-wrapper ul.tabs.primary li a:hover {
-  background-color: #FFF;
-  color: #000;
-}
-
 #media-browser-tabset #branding {
-  background-color: #000;
+  background-color: #555555;
   padding-bottom: 0.5em;
 }
 #media-browser-tabset #branding h1 {
   height: auto;
+}
+#media-browser-tabset #branding #media-tabs-wrapper ul.tabs.primary {
+  margin: 1em 0em;
+}
+#media-browser-tabset #branding #media-tabs-wrapper ul.tabs.primary li {
+  padding: 0 1em 0 0;
+}
+#media-browser-tabset #branding #media-tabs-wrapper ul.tabs.primary li.ui-state-active a {
+  border-color: #008fdc;
+}
+#media-browser-tabset #branding #media-tabs-wrapper ul.tabs.primary li a:hover {
+  border-bottom: 4px solid #ffffff;
+}
+#media-browser-tabset ul.tabs.primary li a:link {
+  color: #FFF;
+  padding-bottom: 5px;
+  font-size: 1.25em;
 }
 
 /* =============================================================================
