--- a/sass/components/media/_media.scss
+++ b/sass/components/media/_media.scss
@@ -2,27 +2,40 @@
    Media
    ========================================================================== */
 
-.media-browser-tab {
-  padding: 1.5em;
-}
-
-#media-browser-tabset ul.tabs.primary li a:link {
- color: #FFF;
-}
-
-#media-browser-tabset #media-tabs-wrapper ul.tabs.primary li a{
-  background-color: #008fdc;
-}
-
-#media-browser-tabset #media-tabs-wrapper ul.tabs.primary li a:hover{
-  background-color: #FFF;
-  color: #000;
-}
-
-#media-browser-tabset #branding {
-  background-color: #000;
-  padding-bottom: 0.5em;
-  h1 {
-    height: auto;
+#media-browser-tabset {
+  .media-browser-tab {
+    padding: 1.25em;
+  }
+  #branding {
+    background-color: #555555;
+    padding-bottom: 0.5em;
+    h1 {
+      height: auto;
+    }
+    #media-tabs-wrapper {
+      ul.tabs.primary {
+        margin: 1em 0em;
+        li {
+          padding: 0 1em 0 0;
+          &.ui-state-active {
+            a {
+              border-color: #008fdc;
+            }
+          }
+          a {
+            &:hover {
+                border-bottom: 4px solid #ffffff;
+            }
+          }
+        }
+      }
+    }
+  }
+  ul.tabs.primary {
+    li a:link {
+      color: #FFF;
+      padding-bottom: 5px;
+      font-size: 1.25em;
+    }
   }
 }
