--- a/css/wetkit_ember.styles.css
+++ b/css/wetkit_ember.styles.css
@@ -103,6 +103,16 @@ div.vertical-tabs .vertical-tabs-pane fieldset legend {
   margin: 0em 1em;
 }
 
+select {
+  -moz-appearance: none;
+  -webkit-appearnace: none;
+  text-indent: .01px;
+  text-overflow: '';
+}
+select::-ms-expand {
+  display: none;
+}
+
 /* =============================================================================
    Views
    ========================================================================== */
