Firefox fix for drop down arrows.

--- a/css/wetkit_ember.styles.css
+++ b/css/wetkit_ember.styles.css
@@ -123,6 +123,11 @@ select::-ms-expand {
   display: none;
 }
 
+.form-select {
+  background-repeat: no-repeat;
+  background-position: right center;
+}
+
 /* =============================================================================
    Views
    ========================================================================== */
