Minor Ember improvements.

--- a/css/wetkit_ember.styles.css
+++ b/css/wetkit_ember.styles.css
@@ -1,8 +1,20 @@
 /* =============================================================================
    Ember
    ========================================================================== */
+.ctools-content ul {
+  padding-left: 0px;
+}
+
 .views-exposed-form .views-exposed-widget {
   overflow: hidden;
+}
+
+ul.action-links {
+  padding-left: 0px;
+}
+
+.features-export-component .fieldset-legend {
+  margin-left: 0.5em;
 }
 
 /* =============================================================================
